--- a/assets/less/lessframwork.less
+++ b/assets/less/lessframwork.less
@@ -4,7 +4,7 @@
 
 	#wrap{width: 100%;}
 
- .header{width:100% !important;}
+ // .header{width:100% !important;}
  .header .sub_menu{ margin-left: 0; }
 	.sub_menu>li{ width:120px !important; float: left; display: block;}
 .service{margin-left:0;}
