--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -7,7 +7,8 @@ a {
   text-decoration: none;
   color: #000;
 }
-.sub_menu>li {.tt(#fff); padding:0 5px 0 5px;}
+
+.sub_menu>li {.tt(#0ff); padding:0 5px 0 5px;}
 //페이드인아웃
  [class^="container"]{
     position: relative;
