--- a/assets/less/variable.less
+++ b/assets/less/variable.less
@@ -1,1 +1,67 @@
 @color:#F00;
+
+@media screen and (min-width:1000px)and(max-width:1525px){
+
+	.header{width: 99% !important;}
+ .hoprice {
+	    margin-left: 255px;
+}
+}
+@media screen and(min-width:900px)and(max-width:1235px) {
+	.header{width: 99% !important;}
+	.qe{display:none !important;}
+	 .qw {width: 77px !important; }
+	.sub_menu{text-align: left !important;}
+	.sub_menu>li{padding: 0 !important;}
+	.house{width: 123px !important;}
+	#mpage{width:80px !important;}
+	[class^="star"]{width: 20px!important; height: 20px!important; }
+	.star{margin-left: -252px !important;} .star2{margin-left: -225px !important;} .star3{margin-left: -202px !important;} .star4{margin-left: -178px !important;}
+	.hoprice{margin-left: 221px !important;}
+ .honame {font-size: 14px !important; font-weight: bold;}
+ .button{margin-top: 69px !important; margin-left: -37px !important; padding: 0!important;}
+	.dollor {margin-left: 6px !important;}
+  .flight{padding: 8px 14px !important;} .cars{padding: 8px 11px !important;} .hotels{padding: 8px 10px !important;}
+	.booking{padding: 8px 12px !important; } .travel{padding: 8px 12px !important;}   .korea{padding: 8px 13px !important;}
+	.housekorea{    padding: 8px 9px !important;}
+	.bt{font-size: 14px !important;}
+	.let2{line-height: 19px !important; width: 341px !important; font-size:14px !important;}
+ .middlee {margin-top: -326px !important; margin-left: 374px !important;}
+ .right{margin-left: 627px !important;  margin-top: -266px !important;}
+.bottom1 {margin-left: -193px !important;}
+
+
+
+
+}
+
+@media screen and(min-width:634px)and(max-width:899px){
+	.header{width: 99% !important;}
+	.qe{display:none !important;}
+	.logo{width: 100px !important; height: 100px !important; margin-top: -130px !important;}
+	.qw {width:67px !important; font-size: 14px !important; margin-top:0 !important; }
+	.sub_menu{text-align: center !important;}
+	.sub_menu > li{padding: 0 !important;}
+	.house{width:80px !important;}
+	[class^="star"]{width: 20px!important; height: 20px!important; }
+	.starcollect{display: none;}
+	.hoprice{margin-left: 158px !important;}
+	.honame {font-size: 14px !important; font-weight: bold; margin-top: -285px  !important; margin-left: 33px  !important;}
+	.button{margin-top:152px !important; margin-left: 198px !important; padding: 0!important;}
+	.dollor {margin-left: 6px !important;}
+	.amazing{text-align: center !important;}
+	.carcollect{width: 73% !important;}
+	.seemore{ margin-top: -74px !important;}
+[class^="car_"]{margin-left: 40px !important;}
+[class^="car"] img{ width:150px; height:150px;}
+.brand { width:100px !important; height:100px !important;       margin-left: -56px !important;}
+.bonmun{display: none!important;}
+
+
+}
+
+
+
+	//  .sub_menu{padding-right:219px;}
+	//  .loginn{margin-top:-100px !important; margin-left:-440px;    left: 458px; position: relative;}
+	//  .joinn{margin-top:-100px !important; margin-left:-377px;    left: 458px; position: relative;}
