--- a/assets/less/common.less
+++ b/assets/less/common.less
@@ -4,9 +4,9 @@ body{
 // 탑메뉴
 
 .header {
-   width:100%; height: 160px; background-color:#fff;  border: 1px #ccc solid; vertical-align: middle; position: relative;
+   width:80%; height: 160px; margin: auto; background-color:#fff;  border:3px #ccc solid; vertical-align: middle; position: relative;
   .logo{
-    width: 150px; height: 150px; display: inline-block; float: left; margin-left:100px; margin-top:-130px;
+    width: 150px; height: 150px; display: inline-block; float: left; margin-top:-130px;
       img{
         display: inline-block; vertical-align: middle; margin-top:11px; width: 100%; height: 100%;
       }
@@ -16,7 +16,7 @@ body{
   .car{margin-left:10px;}.mypagee{margin-left:-32px !important; width:210px;} .service{ width:130px;}
    .login{width:130px;} .join{width:130px;}
      .qw{
-      width:150px;  font-size:20px; margin-top:-5px;  text-align: center;
+      width:121px;  font-size:20px; margin-top:-5px;  text-align: center;
       // a:hover{text-decoration:underline;color:#f0f;} float: left;
     }
       }
@@ -52,7 +52,7 @@ body{
 .hotel6{text-align: center; display: inline-block;   margin-top: 173px; width:33.3%; height:300px; float: left;}
 .hotel1_1{border:1px #f98128 solid; width: 110px; height:35px; border-radius: 50px 50px 50px 50px; right: 0;
     bottom: 7px; z-index:3; position:absolute; background-color:#f98128; }
-.view{cursor: pointer; color: #fff; font-size:25px;     margin-top: -2px; margin-left: -26px; z-index:5; position:absolute;}
+.view{cursor: pointer; color: #fff; font-size:25px;    margin-top: 40px;  margin-left: 8px;z-index:5; position:relative;}
 .honame{font-size:18px; color: #fff; z-index:5; position:absolute; margin-top:-65px; margin-left:5px;}
 .seemore{font-size:15px; color: #0ff; z-index:5; position:absolute; margin-top:-39px; margin-left:11px;}
 .hoprice{color: #f00; font-size: 30px; margin-left: 380px; }
@@ -80,12 +80,11 @@ img{width:100%; height:100%; position: absolute; z-index: 100; }}
 
 //차
 .bonmun{float: left; margin-top: 80px;
-  .tt(#fff);
-
-  width: 433px;}
-[class^="car_"]{float: left; margin-top: 80px; .tt(#fff)}
-.theme{float: left; margin-left: 50px; margin-top:-25px;}
-.icon{margin-top: 120px; margin-left:-330px; display: inline-block;}
+  .tt(#fff); overflow: hidden; width: 433px;}
+  .dollor{color:#e16f20; font-size:30px; text-align:center;   margin-left: -332px;}
+[class^="car_"]{float: left; margin-top: 100px; .tt(#fff); overflow: hidden;}
+.theme{float: left; margin-left: 50px; margin-top:-25px;overflow: hidden;}
+.icon{margin-top: 120px; margin-left:-330px; display: inline-block;overflow: hidden;}
 [class^="cicon"] img{ width:100%; height:100%;}
 .cicon{display:inline-block; padding:15px 10px 10px 10px; .tt(#fff);
   background-image: url(../images/human.png);  width:1px; height: 20px;
@@ -101,26 +100,30 @@ img{width:100%; height:100%; position: absolute; z-index: 100; }}
   background-size: 30px; background-repeat: no-repeat; background-position: 1px 11px;}
 .text1{display: inline-grid; margin-left: 270px;}
 .text{background-image: url(../images/check.png);  background-position: 2px 1px;
-  display:inline-block; background-size: 25px; background-repeat: no-repeat; padding:4px 9px 4px 31px; margin-left:-216px;}
-.button{ padding: 139px; float: left; .tt(#fff)}
+ background-size: 25px; background-repeat: no-repeat; padding:4px 9px 4px 31px; margin-left:-216px;}
+.button{margin-left:10px; padding: 139px; float: left; .tt(#fff); overflow: hidden; margin: auto;}
 .greatvalue{background-color: #6c6c6c; border: none; color: white;  padding: 24px 44px; text-align: center; text-decoration: none;
-  display: inline-block; font-size: 22px; cursor: pointer; border-radius:23px;}
+  display: inline-block; font-size: 22px; cursor: pointer; border-radius:23px;overflow: hidden;}
 .choose{background-color: #00f; border: none; color: white;  padding: 16px 33px; text-align: center; text-decoration: none;
-  display: inline-block; font-size: 22px; cursor: pointer; border-radius:50px;  margin-top: 28px; margin-left: 28px;}
-.carlist:first-child{margin-top: 140px;}
+  display: inline-block; font-size: 22px; cursor: pointer; border-radius:50px;  margin-top: 28px; margin-left: 28px;overflow: hidden;}
+.carlist:first-child{margin-top: 140px;overflow: hidden;}
 .carlist{
-  max-width:1192px; margin:auto;
-  // border: 1px #000 solid;
+  max-width:1192px; margin:auto; overflow: hidden;
+ border: 1px #0f0 solid;
 }
+.carcollect{border: 3px #ff0 solid; width: 99%; margin:auto; }
 
-.d{.tt(#f00)}
+.d{.tt(#f00); overflow: hidden;}
 //footer
-.bottom{background-color:#050b17; outline:2px #fff solid; width: 100%; height: 690px; display: inline-block;}
+.bottom{
+   background-color:#050b17;
+  // background-color: #transparent;
+  outline:2px #f0f solid; width: 100%; height: 690px; display: inline-block;}
 .bottom1{margin-left:-125px; z-index:100;
   .let{color:#fff;  font-size:35px; margin-left: 225px; margin-top:-551px; z-index: 10;}
   .let2{line-height:31px; font-size:20px; color:#fff; margin-left: 209px; margin-top:51px; z-index: 10;}
          }
-.middlee{color:#fff;  font-size:35px; margin-left: 781px; margin-top:-373px; z-index: 10;
+.middlee{color:#fff;  font-size:35px; margin-left: 781px; margin-top:-374px; z-index: 10;
   .contact{line-height:58px; font-size:25px; color:#fff; margin-top:44px; z-index: 10;}
         }
 .right{color:#fff;  font-size:35px; margin-left: 1261px; margin-top:-261px; z-index: 10;
